<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App Watcher</string>
    <string name="no_data">Click on \"Plus\" to add an app.</string>
    <string name="menu_add">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="failed_gain_access">Please allow access. The permission is required in order to communicate with Google Play Store.</string>
    <string name="search_hint">Search an app</string>
    <string name="search_action">Search</string>
    <string name="search_for_app">Search for an application and click on it to add to the watch list.\n( Tip: you can add apps directly from Play Store using \"Share\" button )</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_result_found">No results for \"%s\"</string>
    <string name="error_insert_app">Failed to add application to the watch list.</string>
    <string name="application_icon">Application icon</string>
    <string name="play_store">Play Store</string>
    <string name="remove">Remove</string>
    <string name="whats_new">What\'s new</string>
    <string name="whats_new_title">What\'s new</string>
    <string name="problem_occured">Problem occurred during receiving information.</string>
    <string name="menu_auto_update">Automatic update</string>
    <string name="menu_wifi_only">Wi-Fi Only</string>
    <string name="alert_dialog_remove_title">Remove?</string>
    <string name="alert_dialog_remove_message">Do you want to stop watching after \"%s\" updates?</string>
    <string name="alert_dialog_remove">Remove</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="version">Version %s</string>
    <string name="update">Updated to %s</string>
    <string name="notification_one_updated">%s update found</string>
    <string name="notification_many_updates">%d updates found</string>
    <string name="notification_2_apps">%1$s, %2$s</string>
    <string name="notification_2_apps_more">%1$s, %2$s and more</string>    
    <string name="notification_click">Click to see details</string>
    <string name="no_updates_found">No updates found.</string>
    <string name="about">About</string>
    <string name="dialog_about_title">%1$s ver. %2$s</string>    
    <string name="dialog_about_text">Author: Alex Gavrishev&lt;br/&gt;&lt;a href=&quot;https://play.google.com/store/apps/developer?id=Alex+Gavrishev&quot;&gt;Google Play Store&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Project is licensed under a &lt;a href=&quot;http://creativecommons.org/licenses/by-sa/3.0/&quot;&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License.&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Source Code available at &lt;a href=&quot;https://github.com/anod/AppWatcher&quot;&gt;github.com&lt;/a&gt;.</string>
    <string name="share">Share</string>
    <string name="share_subject_normal">Check out \"%s\"</string>
    <string name="share_subject_updated">Check out new version of \"%s\"</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="app_stored">\"%s\" added to the watch list</string>
    <string name="rate_app">Rate this app</string>
    <string name="installed">INSTALLED</string>
    <string name="no_recent_changes">No information about recent changes was provided.</string>
    <string name="google_account_not_found">Google account not found.</string>
    <string name="list_export">Export</string>
    <string name="last_update">Last Update: %1$s</string>
    <string name="list_import">Import</string>
    <string name="no_files_found">No files found</string>
    <string name="please_wait">Please, wait&#8230;</string>
    <string name="export_done">Done</string>
    <string name="unable_delete_file">Unable to delete file</string>
    <string name="import_done">Import finished</string>
    <string name="external_storage_not_available">External storage not available</string>
    <string name="restore_deserialize_failed">Cannot read JSON data</string>
    <string name="failed_to_read_file">Cannot read file</string>
    <string name="file_not_exist">File not exist</string>
    <string name="failed_to_write_file">Failed to write into file</string>
    <string name="import_export">Import/Export</string>
    <string name="export_path">/sdcard/data/com.anod.appwatcher/backup/</string>
	<string name="recently_updated">Recently updated</string>
	<string name="watching">Watching</string>
	<string name="menu_filter">Filter</string>
	<string name="accounts">Accounts</string>
	<string name="choose_an_account">Choose an account</string>
	<string name="crash_toast_text">AppWatcher Crashed</string>
	<string name="app_already_added">App alreay in the watch list</string>
	<string name="free">FREE</string>
	<string name="error_fetchin_info">Error fetching information. Please, try again</string>
</resources>