<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/menu_add">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/menu_refresh">
    </item>
    <item
        android:id="@+id/menu_auto_update"
        android:checkable="true"
        android:showAsAction="never|withText"
        android:title="@string/menu_auto_update" android:icon="@drawable/ic_menu_autoupdate">
    </item>
    <item
        android:id="@+id/menu_wifi_only"
        android:checkable="true"
        android:showAsAction="never|withText"
        android:title="@string/menu_wifi_only" android:icon="@drawable/ic_menu_wifi">
    </item>
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never|withText"
        android:title="@string/about" android:icon="@drawable/ic_menu_about">
    </item>

</menu>