<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
>


	 	<TextView
	 	    android:id="@+id/textView1"
	 	    android:layout_width="match_parent"
	 	    android:layout_height="wrap_content"

	 	    android:gravity="center_horizontal"
	 	    android:text="@string/list_import"
	 	    android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
				android:id="@+id/textView2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/export_path"
				android:gravity="center_horizontal"
				android:background="@drawable/abs__ab_transparent_dark_holo"
				android:textAppearance="?android:attr/textAppearanceSmall" />

     <ListView android:id="@android:id/list"
               android:layout_width="match_parent"
               android:layout_height="0dip"
               android:layout_weight="1"
               android:drawSelectorOnTop="false"/>

     <TextView android:id="@android:id/empty"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:text="@string/no_files_found"/>
 </LinearLayout>
 