<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|clip_vertical"
    android:orientation="vertical" >
        
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >

	    <LinearLayout
	        android:id="@+id/new_indicator"
	    	android:layout_width="5dip"
	    	android:layout_height="match_parent"
	    	android:gravity="center_vertical"
	    	android:orientation="horizontal"
	    	android:background="@color/blue_new" >
	    </LinearLayout>
	    
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="@dimen/icon_size"
	        android:layout_height="@dimen/icon_size"
	        android:layout_margin="4dip"
	        android:src="@drawable/ic_empty"
	        android:contentDescription="@string/application_icon" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|clip_vertical"
	        android:orientation="vertical" >
	 
		    <TextView
		        android:id="@+id/title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/details"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/options"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal|center_vertical"
	    android:orientation="horizontal" >

		<ImageButton
		    android:id="@+id/changelog_btn"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_about"
		    android:background="@android:color/transparent"
		    android:contentDescription="@string/whats_new"
		    />
	    <View
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:layout_marginTop="5dip"
	        android:layout_marginBottom="5dip"
		    android:background="@drawable/divider_vertical_dark" 
	    />
	    
	    <ImageButton
	        android:id="@+id/market_btn"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_play_store"
		    android:background="@android:color/transparent"
	        android:contentDescription="@string/play_store" />

	    <View
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:layout_marginTop="5dip"
	        android:layout_marginBottom="5dip"
		    android:background="@drawable/divider_vertical_dark" 
	    />	    
	    <ImageButton
	        android:id="@+id/remove_btn"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"        
	        android:src="@drawable/ic_remove"
		    android:background="@android:color/transparent"
	        android:contentDescription="@string/remove"  />
	</LinearLayout>
			
</LinearLayout>