<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="4dp">

    <include layout="@layout/list_apps_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/icon_wrapper"
            android:layout_height="match_parent">

            <ImageView
                android:id="@android:id/icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/application_icon"
                android:layout_marginLeft="8dip"
                android:src="@drawable/ic_empty" />

            <LinearLayout
                android:id="@+id/new_indicator"
                android:layout_width="4dip"
                android:layout_height="match_parent"
                android:background="@color/blue_new"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"></LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|clip_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/textSizeTitle" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@android:id/title"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/updated"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/details"
                android:text="@string/app_name"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/details"
                android:layout_alignRight="@+id/price"
                android:text="@string/app_name"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:ellipsize="end"
                android:gravity="right"
                android:singleLine="true"
                android:text="INSTALLED 5.6.1609P.1258283"
                android:textColor="@color/green"
                android:textSize="@dimen/textSize" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/app_act_button"
            android:contentDescription="@string/share"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_action_share"
            android:text="@string/share" />

        <Button
            android:id="@+id/changelog_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/app_act_button"
            android:contentDescription="@string/whats_new"
            android:drawableLeft="@drawable/ic_action_info"
            android:drawablePadding="0dp"
            android:focusable="false"
            android:paddingLeft="4dp"
            android:text="@string/whats_new"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/market_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/app_act_button"
            android:contentDescription="@string/play_store"
            android:drawableLeft="@drawable/ic_action_playback_play"
            android:drawablePadding="0dp"
            android:focusable="false"
            android:paddingLeft="4dp"
            android:text="@string/play_store"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/textSize" />

        <ImageButton
            android:id="@+id/remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/app_act_button"
            android:contentDescription="@string/remove"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_action_cancel" />
    </LinearLayout>

</LinearLayout>